Source/WebKit2/UIProcess/API/C/CoordinatedGraphics/WKView.h
@@ -98,7 +98,7 @@ WK_EXPORT void WKViewResumeActiveDOMObjectsAndAnimations(WKViewRef);
 WK_EXPORT void WKViewSetShowsAsSource(WKViewRef, bool);
 WK_EXPORT bool WKViewGetShowsAsSource(WKViewRef);
 
-WK_EXPORT void WKViewExitFullScreen(WKViewRef);
+WK_EXPORT bool WKViewExitFullScreen(WKViewRef);
 
 #ifdef __cplusplus
 }
