Source/WebKit2/UIProcess/WebFullScreenManagerProxy.cpp
@@ -42,6 +42,9 @@ PassRefPtr<WebFullScreenManagerProxy> WebFullScreenManagerProxy::create(WebPageP
 WebFullScreenManagerProxy::WebFullScreenManagerProxy(WebPageProxy* page)
     : m_page(page)
     , m_webView(0)
+#if PLATFORM(EFL)
+    , m_hasRequestedFullScreen(false)
+#endif
 {
     m_page->process()->addMessageReceiver(Messages::WebFullScreenManagerProxy::messageReceiverName(), m_page->pageID(), this);
 }
